routing+routerrpc+lncli: enable last hop restriction for payments
