# lnrpc/rpc.swagger.json
@@ -3681,6 +3681,11 @@
           "format": "boolean",
           "description": "*\nWhether to forgo checking for the maximum outbound amount before attempting\nto send the payment.\n\nWhen sending a payment, the node will check if there is enough outbound\nbandwidth in at least one of its directly connected channels (after\naccounting for the required reserves) before attempting to determine a\nroute for it. Specifying this parameter will disable these checks and allow\nthe node to attempt the payment even if there are no outbound channels with\nenough capacity to send it."
         },
+        "last_hop_pubkey": {
+          "type": "string",
+          "format": "byte",
+          "description": "*\nThe pubkey of the last hop of the route. If empty, any hop may be used."
+        },
         "cltv_limit": {
           "type": "integer",
           "format": "int64",
